@@ -8,6 +8,7 @@ formats = {
 	(".grd",): "gridgen",
 	(".vtp",): "vtk",
 	(".ply",): "ply",
+	(".off",): "off",
 }
 
 def getFormat(file, flag):
